[LAYOUT] re-make booking calendars

--- a/btr/templates/bookings/calendar.html
+++ b/btr/templates/bookings/calendar.html
@@ -3,7 +3,7 @@
 <table class="table text-center b-cal">
     <thead>
        <tr class="text-center">
-           <th scope="col" colspan="7">{{ current_month }}, {{ current_year }}</th>
+           <th scope="col" colspan="7">{{ verbose_current_al }}, {{ current_year }}</th>
        </tr>
        <tr>
            <th scope="col">{% translate 'Monday' %}</th>
