--- a/btr/templates/bookings/calendar2.html
+++ b/btr/templates/bookings/calendar2.html
@@ -3,7 +3,7 @@
 <table class="table text-center b-cal">
     <thead>
        <tr class="text-center">
-           <th scope="col" colspan="7">{{ next_month }}, {{ next_year }}</th>
+           <th scope="col" colspan="7">{{ verbose_next_al }}, {{ next_year }}</th>
        </tr>
        <tr>
            <th scope="col">{% translate 'Monday' %}</th>
