[LAYOUT] fix templates add styles

--- a/btr/templates/forms/user_edit.html
+++ b/btr/templates/forms/user_edit.html
@@ -11,7 +11,7 @@
             <div class="row mt-4 text-center">
                 <div class="col-lg-3 col-0"></div>
                 <div class="col-lg-6 col-0">
-                    <img src="{% static 'images/edit.png' %}" width="170" height="170" alt="Auth">
+                    <img src="{% static 'images/edit.png' %}" width="130" height="130" alt="edit">
                     <h2 class="text-center mt-3">{% translate 'Profile Edit' %}</h2>
                     <div class="mb-5"></div>
                 </div>
