--- a/btr/templates/modals/booking.html
+++ b/btr/templates/modals/booking.html
@@ -71,7 +71,7 @@
                                 </div>
                                 <div class="container">
                                     {% if not slots %}
-                                        <h1 class="fs-1">{% translate 'No available slots :( Check another day!' %}</h1>
+                                        <h1 class="fs-4 text-white my-4">{% translate 'No available slots :( Check another day!' %}</h1>
                                     {% else %}
                                         <table class="table">
                                             <thead>
@@ -98,6 +98,10 @@
                                         <a href="{% url 'book_create' %}?selected_date={{ next_year }}-{{ next_month }}-{{ number }}&slots={{ slots }}&verbose={{ verbose_next_month }}" class="btn btn-lg btn-outline-success">
                                             {% translate 'Go to Time Selection' %}
                                         </a>
+                                    {% else %}
+                                        <button type="button" class="btn btn-outline-light" data-bs-dismiss="modal">
+                                          {% translate 'Close' %}
+                                        </button>
                                     {% endif %}
                                 </div>
                             </div>
