add update avatar feature

--- a/btr/templates/modals/user.html
+++ b/btr/templates/modals/user.html
@@ -25,7 +25,7 @@
                 <div class="row mt-4">
                     <div class="col-1"></div>
                     <div class="col-5">
-                        <a class="link-light modal-link" href="{% url 'user_edit' pk=user.pk %}">
+                        <a class="link-light modal-link" href="#">
                           {% translate 'Edit profile' %}
                         </a>
                     </div>
