add social links

--- a/btr/templates/footer.html
+++ b/btr/templates/footer.html
@@ -5,16 +5,16 @@
       <span>{% translate 'Get connected with us on social networks:' %}</span>
     </div>
     <div>
-      <a href="#" class="me-4 f-a">
+      <a href="https://wa.me/+79992350091" class="me-4 f-a">
         <img class="f-ico" src="{% static 'images/footer/wts.png' %}" alt="Wts">
       </a>
-      <a href="#" class="me-4 f-a">
+      <a href="https://vk.com/broteamracing" class="me-4 f-a">
         <img class="f-ico" src="{% static 'images/footer/vk.png' %}" alt="Vk">
       </a>
-      <a href="#" class="me-4 f-a">
+      <a href="https://t.me/VovaFerra" class="me-4 f-a">
         <img class="f-ico" src="{% static 'images/footer/tg.png' %}" alt="Tg">
       </a>
-      <a href="#" class="me-4 f-a">
+      <a href="https://www.youtube.com/@VovkaLife365" class="me-4 f-a">
         <img class="f-ico" src="{% static 'images/footer/yt.png' %}" alt="YT">
       </a>
     </div>
@@ -31,7 +31,7 @@
       </div>
       <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
         <h6 class="text-uppercase fw-bold mb-4">{% translate 'Come to us' %}</h6>
-        <p><a href="{% url 'book_create' %}" class="text-reset">{% translate 'Booking a ride' %}</a></p>
+        <p><a href="{% url 'bookings' %}" class="text-reset">{% translate 'Booking a ride' %}</a></p>
         <p><a href="{% url 'contacts' %}" class="text-reset">{% translate 'Contacts' %}</a></p>
       </div>
       <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
