[LAYOUT] make modal windows pop with transition

--- a/btr/templates/modals/history.html
+++ b/btr/templates/modals/history.html
@@ -44,10 +44,15 @@
                     </div>
                 {% endif %}
             </div>
-            <div class="container-fluid c-black-color p-3">
-                <button type="button" class="btn btn-outline-light" data-bs-dismiss="modal">
-                  {% translate 'Close' %}
-                </button>
+            <div class="container-fluid c-body-color">
+                <div class="row my-1">
+                    <div class="col-lg-10 col-0"></div>
+                    <div class="col-lg-2 col-12">
+                        <button type="button" class="btn link-dark modal-link" data-bs-dismiss="modal">
+                          {% translate 'Close' %}
+                        </button>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
