[LAYOUT] update user profile

--- a/btr/templates/users/info.html
+++ b/btr/templates/users/info.html
@@ -4,33 +4,39 @@
     <div class="card-body">
         <h3 class="card-title">{% translate 'Personal info' %}</h3>
         <div class="row mt-4">
-            <div class="col">
+            <div class="col-lg-6 col-12">
                 <h6 class="mb-0">{% translate 'Name' %}</h6>
             </div>
-            <div class="col text-secondary">{{ user.first_name }}</div>
+            <div class="col-lg-6 col-12 text-secondary">{{ user.first_name }}</div>
         </div>
         <hr>
         <div class="row">
-            <div class="col">
+            <div class="col-lg-6 col-12">
                 <h6 class="mb-0">{% translate 'Email' %}</h6>
             </div>
-            <div class="col text-secondary">{{ user.email }}</div>
+            <div class="col-lg-6 col-12 text-secondary">{{ user.email }}</div>
         </div>
         <hr>
         <div class="row">
-            <div class="col">
+            <div class="col-lg-6 col-12">
                 <h6 class="mb-0">{% translate 'Phone' %}</h6>
             </div>
-            <div class="col text-secondary">{{ user.phone_number }}</div>
+            <div class="col-lg-6 col-12 text-secondary">{{ user.phone_number }}</div>
         </div>
         <hr>
         <div class="pb-3"></div>
-        <div class="row text-start">
+        <div class="row text-start mt-2">
             <div class="col-lg-4 col-12">
-                <a href="{% url 'user_edit' pk=user.pk %}" class="btn btn-outline-warning">{% translate 'Edit Profile' %}</a>
+                <a href="{% url 'user_edit' pk=user.pk %}" class="link-warning modal-link">
+                    {% translate 'Edit Profile' %}
+                </a>
             </div>
-            <div class="col-lg-4 col-0"></div>
-            <div class="col-lg-4 col-0"></div>
+            <div class="col-lg-4 col-12 mt-3"></div>
+            <div class="col-lg-4 col-12">
+                <a href="{% url 'change_password' pk=user.pk %}" class="link-light modal-link">
+                    {% translate 'Change password' %}
+                </a>
+            </div>
         </div>
     </div>
 </div>
