[LAYOUT] password update form

--- a/btr/templates/forms/change_password.html
+++ b/btr/templates/forms/change_password.html
@@ -11,8 +11,8 @@
             <div class="row mt-4 text-center">
                 <div class="col-lg-3 col-0"></div>
                 <div class="col-lg-6 col-0">
-                    <img src="{% static 'images/fix.png' %}" width="130" height="130" alt="edit">
-                    <h2 class="text-center mt-3">{% translate 'Profile Edit' %}</h2>
+                    <img src="{% static 'images/password.png' %}" width="130" height="130" alt="edit">
+                    <h2 class="text-center mt-3">{% translate 'Change Password' %}</h2>
                     <div class="mb-5"></div>
                 </div>
                 <div class="col-lg-3 col-0"></div>
@@ -23,16 +23,11 @@
                     <form method="post">
                         {% csrf_token %}
                         {% bootstrap_form form %}
-                        <input class="btn btn-success" type="submit" value="{% translate 'Confirm' %}">
+                        <input class="btn btn-success" type="submit" value="{% translate 'Change' %}">
                     </form>
                     <div class="mb-5"></div>
                 </div>
                 <div class="col-lg-3 col-0"></div>
-            </div>
-            <div class="row text-center">
-                <a class="link-danger modal-link" href="{% url 'user_delete' pk=user.pk %}">
-                    {% translate 'Delete profile' %}
-                </a>
             </div>
             <div class="pb-5"></div>
         </div>
