--- a/btr/templates/emails/email_base.html
+++ b/btr/templates/emails/email_base.html
@@ -6,7 +6,7 @@
       xmlns:o="urn:schemas-microsoft-com:office:office" lang="ru">
 
 <head>
-    <!--    {% load i18n %}-->
+    {% load i18n %}
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
@@ -120,7 +120,7 @@
 
         <!-- Preheader (remove comment) -->
         <div style="font-size: 0px;color: #fafdfe;line-height: 1px;mso-line-height-rule:exactly;display: none;max-width: 0px;max-height: 0px;opacity: 0;overflow: hidden;mso-hide:all;">
-            Создана запись на прокат #{{ id }}
+            {{ pre_header }} #{{ id }}
         </div>
         <!-- End Preheader (remove comment) -->
 
@@ -153,9 +153,19 @@
                     <table align="center" border="0" cellspacing="0" cellpadding="0" role="presentation">
                         <tr>
                             <td style="padding: 30px 10px 30px 10px;text-align: center;">
-                                <h1 style="margin: 0;font-weight: 600;font-size: 32px;line-height: 1;color: #1C1E23;">
-                                    Новая запись на прокат
-                                </h1>
+                                {% if action == 'registration' or action == 'password-reset' or action == 'recover-data' %}
+                                    <h1 style="margin: 0;font-weight: 600;font-size: 32px;line-height: 1;color: #000000;">
+                                        {{ header }}
+                                    </h1>
+                                {% elif action == 'confirm' %}
+                                    <h1 style="margin: 0;font-weight: 600;font-size: 32px;line-height: 1;color: #19BD00;">
+                                        {{ header }}
+                                    </h1>
+                                {% elif action == 'cancel' or action == 'self-cancel' %}
+                                    <h1 style="margin: 0;font-weight: 600;font-size: 32px;line-height: 1;color: #BD0016;">
+                                        {{ header }}
+                                    </h1>
+                                {% endif %}
                             </td>
                         </tr>
                     </table>
@@ -167,21 +177,113 @@
             <tr>
                 <td>
                     <table style="background-color: #FFFFFF;" align="center" border="0" cellspacing="0" cellpadding="0" role="presentation">
-                        <tr>
-                            <td style="padding: 40px 20px 10px 20px;text-align: center;">
-                                <h2 style="margin: 0;font-size: 22px;font-style: italic;color: #1C1E23;">
-                                    Привет, {{ name }},<br>
-                                    Мы увидели, что вы создали запись на прокат #{{ id }}!
-                                </h2>
-                                <p style="margin: 0;padding: 20px 10px 20px 10px;font-size: 20px;color: #1C1E23;">
-                                    Статус вашей записи: <strong>{{ status }}</strong>.
-                                </p>
-                                <p style="margin: 0;padding: 20px 0 40px 0;font-weight: 300;font-size: 16px;color: #1C1E23;">
-                                    <em>В ближайшее время мы обработаем вашу запись
-                                    и вышлем подтверждение на вашу почту.</em>
-                                </p>
-                            </td>
-                        </tr>
+                        {% if action == 'registration' %}
+                            <tr>
+                                <td style="padding: 40px 20px 10px 20px;text-align: center;">
+                                    <h2 style="margin: 0;font-size: 22px;font-style: italic;color: #1C1E23;">
+                                        {% translate 'Hello' %}, {{ name }},<br>
+                                        {% translate 'We are glad to welcome you to our rental!' %}
+                                    </h2>
+                                    <h2 style="margin: 0;font-size: 22px;font-style: italic;color: #1C1E23;">
+                                        {% translate 'In this welcome letter' %},<br>
+                                        {% translate 'you can find all the login information for the site.' %}
+                                    </h2>
+                                    <p style="margin: 0;padding: 20px 0 10px 0;font-weight: 300;font-size: 16px;color: #1C1E23;">
+                                        <em>{% translate 'We are waiting for you at our rental' %},<br>
+                                            {% translate 'come and recharge yourself with positive emotions' %},<br>
+                                            {% translate 'for a long time!' %}</em>
+                                    </p>
+                                </td>
+                            </tr>
+                        {% elif action == 'confirm' %}
+                            <tr>
+                                <td style="padding: 40px 20px 10px 20px;text-align: center;">
+                                    <h2 style="margin: 0;font-size: 22px;font-style: italic;color: #1C1E23;">
+                                        {% translate 'Booking' %} #{{ id }} {% translate 'successfully confirmed' %}!
+                                    </h2>
+                                    <p style="margin: 0;padding: 20px 10px 20px 10px;font-size: 20px;color: #1C1E23;">
+                                        {% translate 'We already prepared for your ride' %}: <strong>{{ bikes }}</strong> {% translate 'bike(s)' %}.
+                                    </p>
+                                    <p style="margin: 0;padding: 20px 0 10px 0;font-weight: 300;font-size: 16px;color: #1C1E23;">
+                                        <em>{% translate 'We are waiting for you at the appointed time' %}.<br>
+                                            {% translate 'If you cannot come to the rental, please cancel it in advance' %}<br>
+                                            {% translate 'or contact us by phone or via social media' %}:</em>
+                                    </p>
+                                </td>
+                            </tr>
+                        {% elif action == 'cancel' %}
+                            <tr>
+                                <td style="padding: 40px 20px 10px 20px;text-align: center;">
+                                    <h2 style="margin: 0;font-size: 22px;font-style: italic;color: #1C1E23;">
+                                        {% translate 'Booking' %} #{{ id }} {% translate 'was canceled 😔' %}
+                                    </h2>
+                                    <p style="margin: 0;padding: 20px 10px 20px 10px;font-size: 20px;color: #1C1E23;">
+                                        {% translate 'Unfortunately, we will not be able to accommodate you on your date' %}.<br>
+                                        {% translate 'Please choose another time or contact us by phone or social media' %}:
+                                    </p>
+                                </td>
+                            </tr>
+                        {% elif action == 'self-cancel' %}
+                            <tr>
+                                <td style="padding: 40px 20px 10px 20px;text-align: center;">
+                                    <h2 style="margin: 0;font-size: 22px;font-style: italic;color: #1C1E23;">
+                                        {% translate 'Booking' %} #{{ id }} {% translate 'was canceled 😔' %}
+                                    </h2>
+                                    <p style="margin: 0;padding: 20px 10px 20px 10px;font-size: 20px;color: #1C1E23;">
+                                        {% translate 'You have canceled your rental appointment' %}.<br>
+                                        {% translate 'For re-registration or any other questions, you can contact us by phone or on social media' %}:
+                                    </p>
+                                </td>
+                            </tr>
+                        {% elif action == 'password-reset' %}
+                            <tr>
+                                <td style="padding: 40px 20px 10px 20px;text-align: center;">
+                                    <h2 style="margin: 0;font-size: 22px;font-style: italic;color: #1C1E23;">
+                                        {% translate 'You are requested a password reset' %}
+                                    </h2>
+                                    <p style="margin: 0;padding: 20px 10px 20px 10px;font-size: 20px;color: #1C1E23;">
+                                        {% translate 'To recover your password, use the confirmation code below' %}
+                                    </p>
+                                    <p style="margin: 0;padding: 20px 0 10px 0;font-weight: 300;font-size: 16px;color: #1C1E23;">
+                                        <em>{% translate 'If you did not request a password reset, simply ignore the email!' %}</em>
+                                    </p>
+                                </td>
+                            </tr>
+                        {% elif action == 'recover-data' %}
+                            <tr>
+                                <td style="padding: 40px 20px 10px 20px;text-align: center;">
+                                    <h2 style="margin: 0;font-size: 22px;font-style: italic;color: #1C1E23;">
+                                        {% translate 'This is an email with your new login details to the site.' %}
+                                    </h2>
+                                    <p style="margin: 0;padding: 20px 0 10px 0;font-weight: 300;font-size: 16px;color: #1C1E23;">
+                                        <em>{% translate 'If you received this email but did not request a password reset' %},<br>
+                                            {% translate 'please contact the administrator.' %}</em>
+                                    </p>
+                                </td>
+                            </tr>
+                        {% endif %}
+                        {% if action == 'confirm' or action == 'cancel' or action == 'self-cancel' %}
+                            <tr>
+                                <td>
+                                    <table style="background-color: #FFFFFF;" align="center" border="0" cellspacing="0" cellpadding="0" role="presentation">
+                                        <tr>
+                                            <td style="text-align: center;padding: 0 30px 10px 0;">
+                                                <p style="font-size: 20px;">
+                                                    <em>Владимир</em><br>
+                                                    <strong>+79992350091</strong>
+                                                </p>
+                                            </td>
+                                            <td style="text-align: center;padding: 0 0 10px 30px;">
+                                                <p style="font-size: 20px;">
+                                                    <em>Александр</em><br>
+                                                    <strong>+79817850451</strong>
+                                                </p>
+                                            </td>
+                                        </tr>
+                                    </table>
+                                </td>
+                            </tr>
+                        {% endif %}
                     </table>
                 </td>
             </tr>
@@ -194,8 +296,12 @@
                         <tr>
                             <td style="padding: 15px 0 15px 0;text-align: center;">
                                 <h4 style="margin: 0;font-weight: 700;font-size: 24px;font-style: italic;color: #000000;">
-                                    Детали записи
-                                </h4>
+                                    {% if action == 'confirm' or action == 'cancel' or action == 'self-cancel' %}
+                                        {% translate 'Booking details' %}
+                                    {% elif action == 'registration' %}
+                                        {% translate '' %}
+                                    </h4>
+
                                 <hr>
                             </td>
                         </tr>
