--- a/btr/templates/footer.html
+++ b/btr/templates/footer.html
@@ -38,7 +38,7 @@
         <h6 class="text-uppercase fw-bold mb-4">{% translate 'Useful links' %}</h6>
         <p><a href="{% url 'briefing' %}" class="text-reset">{% translate 'Briefing' %}</a></p>
         <p><a href="{% url 'reviews' %}" class="text-reset">{% translate 'Reviews' %}</a></p>
-        <p><a href="#" class="text-reset">{% translate 'Blog' %}</a></p>
+        <p><a href="{% url 'blog' %}" class="text-reset">{% translate 'Blog' %}</a></p>
       </div>
       <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
         <h6 class="text-uppercase fw-bold mb-4">{% translate 'Contacts' %}</h6>
