--- a/btr/templates/navbar.html
+++ b/btr/templates/navbar.html
@@ -15,7 +15,7 @@
                       <a class="nav-link font-weight-bold" aria-current="page" href="{% url 'bookings' %}">{% translate 'Book' %}</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link font-weight-bold" aria-current="page" href="#">{% translate 'Gallery' %}</a>
+                      <a class="nav-link font-weight-bold" aria-current="page" href="{% url 'blog' %}">{% translate 'Gallery' %}</a>
                     </li>
                     <li class="nav-item">
                       <a class="nav-link font-weight-bold" aria-current="page" href="{% url 'reviews' %}">{% translate 'Reviews' %}</a>
