change head font

--- a/btr/templates/index.html
+++ b/btr/templates/index.html
@@ -10,7 +10,7 @@
     <div class="mb-5"></div>
     <div class="container">
         <div class="row mb-5">
-            <img class="coral-img" src="{% static 'images/head.png' %}" alt="Head">
+            <img class="cyan-img" src="{% static 'images/bro.png' %}" alt="Broteamracing">
         </div>
         <div class="row mb-5">
             <div class="col-lg-6 col-12 d-flex align-items-center">
