fix booking links

--- a/btr/templates/cards.html
+++ b/btr/templates/cards.html
@@ -40,7 +40,7 @@
             <li>{% translate '2500₽ / hour' %}</li>
           </ul>
           <div class="card-body d-flex justify-content-center">
-            <a href="{% url 'book_create' %}" class="btn btn-outline-success">{% translate 'Book Now' %}</a>
+            <a href="{% url 'bookings' %}" class="btn btn-outline-success">{% translate 'Book Now' %}</a>
           </div>
         </div>
       </div>
@@ -65,7 +65,7 @@
               <li>{% translate '2000₽ / hour' %}</li>
             </ul>
             <div class="card-body d-flex justify-content-center">
-              <a href="{% url 'book_create' %}" class="btn btn-outline-success">{% translate 'Book Now' %}</a>
+              <a href="{% url 'bookings' %}" class="btn btn-outline-success">{% translate 'Book Now' %}</a>
             </div>
         </div>
       </div>
@@ -94,7 +94,7 @@
             <li>{% translate '2500₽ / hour' %}</li>
           </ul>
           <div class="card-body d-flex justify-content-center">
-            <a href="{% url 'book_create' %}" class="btn btn-outline-success">{% translate 'Book Now' %}</a>
+            <a href="{% url 'bookings' %}" class="btn btn-outline-success">{% translate 'Book Now' %}</a>
           </div>
         </div>
       </div>
