add link to LICENSE

--- a/btr/templates/footer.html
+++ b/btr/templates/footer.html
@@ -52,5 +52,5 @@
 </section>
 <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05);">
   © 2024 Copyright:
-  <a class="text-reset fw-bold" href="https://mdbootstrap.com/">{% translate 'All rights reserved' %}</a>
+  <a class="text-reset fw-bold" href="https://github.com/jespy666/btr_rental/blob/main/LICENSE">{% translate 'All rights reserved' %}</a>
 </div>
