--- a/btr/templates/emails/email_base.html
+++ b/btr/templates/emails/email_base.html
@@ -139,7 +139,9 @@
                     <table align="center" border="0" cellspacing="0" cellpadding="0" role="presentation">
                         <tr>
                             <td style="padding: 20px 0 20px 0;text-align: center;">
-                                <img src="https://i.ibb.co.com/YLBL2gQ/logo.png" alt="Logo" border="none" width="90">
+                                <a href="https://broteamracing.ru" target="_blank" style="text-decoration: none;padding: 0 10px 0 0;">
+                                    <img src="https://i.ibb.co.com/J2nWymn/bro.png" alt="Logo" border="none" width="350">
+                                </a>
                             </td>
                         </tr>
                     </table>
@@ -417,7 +419,7 @@
                             </td>
                             <td style="padding: 0 45px 0 45px;"></td>
                             <td style="padding: 0 10px 0 40px; text-align: center;">
-                                <a href="#" target="_blank" style="text-decoration: none;">
+                                <a href="https://broteamracing.ru/auth/login/" target="_blank" style="text-decoration: none;">
                                     <img src="https://i.ibb.co.com/jfLCRrj/default-pi.png" alt="Profile" border="none" width="60">
                                 </a>
                             </td>
@@ -433,7 +435,7 @@
                     <table align="center" border="0" cellspacing="0" cellpadding="0" role="presentation">
                         <tr>
                             <td style="padding: 15px 0 0 0;text-align: center;">
-                                <a href="#" target="_blank" style="text-decoration: none;">
+                                <a href="https://broteamracing.ru" target="_blank" style="text-decoration: none;">
                                     <img src="https://i.ibb.co.com/414FZM6/head.png" alt="Web site" border="none" width="300">
                                 </a>
                             </td>
